Fix header text spacing

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ main {
 }
 
 .photo-banner .fa-chevron-circle-left {
+	font-size: 30px;
 	position: absolute;
 	left: 1%;
 	top: 50%;
@@ -44,6 +45,7 @@ main {
 }
 
 .photo-banner .fa-chevron-circle-right {
+	font-size: 30px;
 	position: absolute;
 	right: 1%;
 	top: 50%;
@@ -150,7 +152,11 @@ a {
 }
 
 .josh-bio h1 {
-	padding-bottom: 15px;
+	margin: 5px;
+}
+
+.josh-bio p {
+	margin-left: 5px;
 }
 
 .button-group {
